v_utils_macros/tests/compile_fail/try_parse_variants_multi_field_variant.rs
use v_utils_macros::TryParseVariants;

// Every variant must be a single-field tuple variant — multi-field variants are not supported.
#[derive(Debug, TryParseVariants)] //~ ERROR: proc-macro derive panicked
pub enum Strategy {
	Trailing(f64, f64),
}
